# handy-dev-tools

./: .gitignore  package-lock.json  package.json  vite.config.ts
client/: index.html
client/public/: 404.html  sitemap.xml
client/public/tool/backslash-escape/: index.html
client/public/tool/base64-image/: index.html
client/public/tool/base64-string/: index.html
client/public/tool/beautify-minify/: index.html
client/public/tool/certificate-decoder/: index.html
client/public/tool/color-converter/: index.html
client/public/tool/cron-parser/: index.html
client/public/tool/curl-to-code/: index.html
client/public/tool/hash-generator/: index.html
client/public/tool/hex-ascii/: index.html
client/public/tool/html-entity/: index.html
client/public/tool/html-jsx/: index.html
client/public/tool/html-preview/: index.html
client/public/tool/json-csv/: index.html
client/public/tool/json-format/: index.html
client/public/tool/json-to-code/: index.html
client/public/tool/jwt-debugger/: index.html
client/public/tool/line-sort-dedupe/: index.html
client/public/tool/lorem-ipsum/: index.html
client/src/: App.tsx  index.css
client/src/components/: SEOHead.tsx
client/src/lib/: platform.ts  seo-config.ts
client/src/pages/: main-layout.tsx  tool.tsx
docs/plans/: 2026-03-11-fix-broken-tools-and-compact-ui-plan.md  2026-03-14-feat-tauri-v2-mac-app-plan.md
scripts/: generate-seo-pages.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+58 files in other folders)
