[package]
name = "handy-dev-tools"
version = "1.0.0"
description = "A collection of handy developer tools as a native Mac app"
authors = ["Shiva Saxena"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3" }
